--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemgon index.js"
+    "start": "nodemon index.js"
   },
   "author": "Lev",
   "license": "ISC",
